RESOLVED FIXED64375
[Qt][WK2] Navigation actions should react to web process availability.
https://bugs.webkit.org/show_bug.cgi?id=64375
Summary [Qt][WK2] Navigation actions should react to web process availability.
Andreas Kling
Reported 2011-07-12 11:30:00 PDT
When the web process is crashed, stop should be disabled and reload only enabled if there's something to reload.
Attachments
Proposed patch (6.54 KB, patch)
2011-07-12 11:30 PDT, Andreas Kling
benjamin: review+
benjamin: commit-queue-
Andreas Kling
Comment 1 2011-07-12 11:30:36 PDT
Created attachment 100529 [details] Proposed patch
Benjamin Poulain
Comment 2 2011-07-12 11:48:32 PDT
Comment on attachment 100529 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=100529&action=review > Source/WebKit2/UIProcess/API/qt/tests/qdesktopwebview/tst_qdesktopwebview.cpp:33 > + void navigationActionEnabledStatusAtStartup(); navigationActionsStatusAtStartup?
Andreas Kling
Comment 3 2011-07-12 11:56:12 PDT
Note You need to log in before you can comment on or make changes to this bug.