third_party/WebKit/Source/WebKit2/UIProcess/qt/QtWebPageProxy.cpp
@@ -34,6 +34,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "LocalizedStrings.h"
 #include "NativeWebKeyboardEvent.h"
 #include "NotImplemented.h"
+#include "WebBackForwardList.h"
 #include "WebContext.h"
 #include "WebContextMenuProxyQt.h"
 #include "WebEditCommandProxy.h"
@@ -481,11 +482,8 @@ void QtWebPageProxy::updateAction(QtWebPageProxy::WebAction action)
         return;
 
     RefPtr<WebKit::WebFrameProxy> mainFrame = m_webPageProxy->mainFrame();
-    if (!mainFrame)
-        return;
 
     bool enabled = a->isEnabled();
-    bool checked = a->isChecked();
 
     switch (action) {
     case QtWebPageProxy::Back:
@@ -495,19 +493,19 @@ void QtWebPageProxy::updateAction(QtWebPageProxy::WebAction action)
         enabled = m_webPageProxy->canGoForward();
         break;
     case QtWebPageProxy::Stop:
-        enabled = !(WebFrameProxy::LoadStateFinished == mainFrame->loadState());
+        enabled = mainFrame && !(WebFrameProxy::LoadStateFinished == mainFrame->loadState());
         break;
     case QtWebPageProxy::Reload:
-        enabled = (WebFrameProxy::LoadStateFinished == mainFrame->loadState());
+        if (mainFrame)
+            enabled = (WebFrameProxy::LoadStateFinished == mainFrame->loadState());
+        else
+            enabled = m_webPageProxy->backForwardList()->currentItem();
         break;
     default:
-        break;
+        ASSERT_NOT_REACHED();
     }
 
     a->setEnabled(enabled);
-
-    if (a->isCheckable())
-        a->setChecked(checked);
 }
 
 void QtWebPageProxy::updateNavigationActions()
@@ -529,12 +527,14 @@ void QtWebPageProxy::webActionTriggered(bool checked)
 
 void QtWebPageProxy::didRelaunchProcess()
 {
+    updateNavigationActions();
     m_viewInterface->didRelaunchProcess();
     setDrawingAreaSize(m_viewInterface->drawingAreaSize());
 }
 
 void QtWebPageProxy::processDidCrash()
 {
+    updateNavigationActions();
     m_viewInterface->processDidCrash();
 }
 
