third_party/WebKit/Source/WebKit2/UIProcess/API/qt/tests/qdesktopwebview/tst_qdesktopwebview.cpp
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     Boston, MA 02110-1301, USA.
 */
 
+#include <QAction>
 #include <QScopedPointer>
 #include <QtTest/QtTest>
 #include <qdesktopwebview.h>
@@ -29,6 +30,8 @@ class tst_QDesktopWebView : public QObject {
 private slots:
     void init();
     void cleanup();
+
+    void navigationActionsStatusAtStartup();
 
 private:
     inline QDesktopWebView* webView() const;
@@ -48,6 +51,25 @@ void tst_QDesktopWebView::cleanup()
 inline QDesktopWebView* tst_QDesktopWebView::webView() const
 {
     return static_cast<QDesktopWebView*>(m_window->webView.data());
+}
+
+void tst_QDesktopWebView::navigationActionsStatusAtStartup()
+{
+    QAction* backAction = webView()->navigationAction(QtWebKit::Back);
+    QVERIFY(backAction);
+    QCOMPARE(backAction->isEnabled(), false);
+
+    QAction* forwardAction = webView()->navigationAction(QtWebKit::Forward);
+    QVERIFY(forwardAction);
+    QCOMPARE(forwardAction->isEnabled(), false);
+
+    QAction* stopAction = webView()->navigationAction(QtWebKit::Stop);
+    QVERIFY(stopAction);
+    QCOMPARE(stopAction->isEnabled(), false);
+
+    QAction* reloadAction = webView()->navigationAction(QtWebKit::Reload);
+    QVERIFY(reloadAction);
+    QCOMPARE(reloadAction->isEnabled(), false);
 }
 
 QTEST_MAIN(tst_QDesktopWebView)
