third_party/WebKit/Source/WebKit2/UIProcess/API/qt/tests/qtouchwebview/tst_qtouchwebview.cpp
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     Boston, MA 02110-1301, USA.
 */
 
+#include <QAction>
 #include <QtTest/QtTest>
 #include <qtouchwebpage.h>
 #include <qtouchwebview.h>
@@ -34,6 +35,7 @@ private slots:
     void cleanup();
 
     void accessPage();
+    void navigationActionsStatusAtStartup();
 
 private:
     inline QTouchWebView* webView() const;
@@ -68,6 +70,26 @@ void tst_QTouchWebView::accessPage()
     QTouchWebPage* const pagePropertyAccess = pagePropertyValue.value<QTouchWebPage*>();
     QCOMPARE(pagePropertyAccess, pageDirectAccess);
 }
+
+void tst_QTouchWebView::navigationActionsStatusAtStartup()
+{
+    QAction* backAction = webView()->page()->navigationAction(QtWebKit::Back);
+    QVERIFY(backAction);
+    QCOMPARE(backAction->isEnabled(), false);
+
+    QAction* forwardAction = webView()->page()->navigationAction(QtWebKit::Forward);
+    QVERIFY(forwardAction);
+    QCOMPARE(forwardAction->isEnabled(), false);
+
+    QAction* stopAction = webView()->page()->navigationAction(QtWebKit::Stop);
+    QVERIFY(stopAction);
+    QCOMPARE(stopAction->isEnabled(), false);
+
+    QAction* reloadAction = webView()->page()->navigationAction(QtWebKit::Reload);
+    QVERIFY(reloadAction);
+    QCOMPARE(reloadAction->isEnabled(), false);
+}
+
 
 QTEST_MAIN(tst_QTouchWebView)
 
